# deepworks

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  README.md
benchmarks/cifar10/: CMakeLists.txt  README.md  benchmark_dw.hpp  benchmark_torch.hpp  main.cpp  run_cifar10_benchmark.sh  utils.hpp
benchmarks/mnist/: CMakeLists.txt  README.md  benchmark_dw.hpp  benchmark_torch.hpp  main.cpp  run_mnist_benchmark.sh  utils.hpp
benchmarks/utils/: CMakeLists.txt  output_utils.cpp  output_utils.hpp
cmake/: FindTorch.cmake  download.cmake
documentation/: data.md  layers.md  model.md  parameter.md  placeholder.md  tensor.md
include/: deepworks.hpp  metrics.hpp  tensor.hpp
include/deepworks/: base_op.hpp  dataloader.hpp  deepworks.hpp  image_reader.hpp  initializers.hpp  layer.hpp  layer_info.hpp  layers.hpp  loss.hpp  metrics.hpp  model.hpp  nn.hpp  optimizer.hpp  optimizers.md  parameter.hpp  placeholder.hpp  serialization.hpp  shape.hpp  tensor.hpp
include/deepworks/utils/: assert.hpp  utils.hpp
samples/: CMakeLists.txt  README.md
samples/cifar10/: CMakeLists.txt  README.md  main.cpp  run_cifar10_test.sh  run_cifar10_train.sh  utility.cpp  utility.hpp
samples/cifar100/: CMakeLists.txt  README.md  main.cpp  run_cifar100_test.sh  run_cifar100_train.sh  utility.cpp  utility.hpp
samples/iris/: CMakeLists.txt  README.md  main.cpp  run_iris_test.sh  run_iris_train.sh  utility.cpp  utility.hpp
samples/mnist/: CMakeLists.txt  README.md  main.cpp  run_mnist_test.sh  run_mnist_train.sh  utility.cpp  utility.hpp
src/: CMakeLists.txt  assert.hpp  call.cpp  call.hpp  call_impl.hpp  call_priv.hpp  dataloader.cpp  deepworks.cpp  initializers.cpp  kernels.cpp  kernels.hpp  layer_cores.cpp  layer_cores.hpp  layer_info.cpp  layer_info.hpp  layers.cpp  loss.cpp  metrics.cpp  model.cpp  optimizer.cpp  placeholder.cpp  placeholder_impl.hpp  placeholder_priv.hpp  serialization.cpp  tensor.cpp
src/expression/: call.cpp  call.hpp  call_impl.hpp  call_priv.hpp  nn.cpp  placeholder.cpp  placeholder_impl.hpp
src/io/: image_reader.cpp
src/model/: graph.hpp  graphbuilder.cpp  graphbuilder.hpp  layer.cpp  layer_info.cpp  model.cpp  model_impl.hpp  model_priv.hpp  parameter.cpp
src/runtime/: backend.hpp  tensor.cpp
src/runtime/cpu/: cpubackend.cpp  cpubackend.hpp
src/runtime/cpu/kernels/: kernels.cpp  kernels.hpp
src/runtime/cpu/layers/: cpuadd.cpp  cpuadd.hpp  cpubatchnorm.cpp  cpubatchnorm.hpp  cpubatchnorm1d.cpp  cpubatchnorm1d.hpp  cpubatchnorm2d.cpp  cpubatchnorm2d.hpp  cpuconvolution.cpp  cpuconvolution.hpp  cpudropout.cpp  cpudropout.hpp  cpuelu.cpp  cpuelu.hpp  cpuglobalavgpooling.cpp  cpuglobalavgpooling.hpp  cpulayer.cpp  cpulayer.hpp  cpuleakyrelu.cpp  cpuleakyrelu.hpp  cpulinear.cpp  cpulinear.hpp  cpumaxpooling.cpp  cpumaxpooling.hpp  cpurelu.cpp  cpurelu.hpp  cpusigmoid.cpp  cpusigmoid.hpp  cpusoftmax.cpp  cpusoftmax.hpp
src/runtime/cpu/loss/: loss.cpp  loss.hpp
src/util/: assert.cpp  assert.hpp  generator.hpp
src/utils/: assert.cpp  generator.hpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  expression_tests.cpp  foo_tests.cpp  kernels_reference.cpp  kernels_reference.hpp  model_tests.cpp  test_batch_norm.cpp  test_cpuadd.cpp  test_cpubackend.cpp  test_cpubatchnorm1d.cpp  test_cpubatchnorm2d.cpp  test_cpuconvolution.cpp  test_cpudropout.cpp  test_cpuelu.cpp  test_cpuglobalavgpool.cpp  test_cpuleakyrelu.cpp  test_cpulinear.cpp  test_cpumaxpooling.cpp  test_cpurelu.cpp  test_cpusigmoid.cpp  test_cpusoftmax.cpp  test_image_reader.cpp  test_loss.cpp  test_metrics.cpp  test_model.cpp  test_networks.cpp  test_optimizer.cpp  test_serialization.cpp  test_tensor.cpp  test_utils.hpp
